<resources>
    <string name="app_name">CoronoSMS</string>
    <string name="option_icon_desc">Option Icon</string>
    <string name="submit_button">Υποβολή</string>
    <string name="no_selected_item">Παρακαλώ επιλέξτε</string>
    <string name="option1">Φαρμακείο ή επίσκεψη στον γιατρό</string>
    <string name="option2">Αγορά προμηθειών</string>
    <string name="option3">Επίσκεψη σε τράπεζα</string>
    <string name="option4">Βοήθεια σε ανθρώπους με ανάγκη</string>
    <string name="option5">Μετάβαση σε τελετή ή γονέα</string>
    <string name="option6">Άσκηση ή βόλτα κατοικιδίου</string>
    <string name="first_name_gr">Όνομα</string>
    <string name="last_name_gr">Επώνυμο</string>
    <string name="address_gr">Διεύθυνση</string>
    <string name="err_toast_info_missing_gr">Συμπληρώστε όλα τα στοιχεία σας!</string>
    <string name="tuto_1">Χαίρετε</string>
    <string name="tuto_2">Διαδικασία</string>
    <string name="tuto_3">Προσοχή</string>
    <string name="description_1">Η εφαρμογή CoronoSMS είναι εδώ για να σας βοηθήσει! Με ένα κλικ θα μπορείτε να στείλετε το μηνυμα σας!
        Καλή δύναμη σε όλους και υπομονή! #MENOUMESPITI</string>
    <string name="description_2">Εφόσον συμπληρώσετε και αποθηκεύσετε τα στοιχεία σας, θα  είστε έτοιμοι για να
        διαλέξετε αιτία εξόδου και να αποστείλετε το μήνυμα στο 13033 .</string>
    <string name="description_3">Για να βεβαιωθείτε πως το μήνυμα σας έχει σταλθεί
    θα πρέπει να περιμένετε εως ότου λάβετε το μήνυμα απάντηση από το 13033.
    Υπάρχουν λόγοι για τους οποίους μπορεί να μην λάβετε μήνυμα π.χ.(φραγή σε 5ψήφια).</string>
    <string name="reason">*Η εφαρμογή αυτή δημιουργήθηκε για διευκόλυνση των πολιτών κατά την περίοδο της καραντίνας λόγω του κορονοϊού. </string>
    <string name="next">ΕΠΟΜΕΝΟ</string>
    <string name="back">ΠΡΟΗΓΟΥΜΕΝΟ</string>
    <string name="done">ΤΕΛΟΣ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tzelalis">Τζελαλής Παναγιώτης</string>
    <string name="xhino">Μουλλαϋμέρι Τζίνο</string>
    <string name="rizik">Ριζικιανός Γιώργος</string>
    <string name="iko">Οικονομίδης Βασίλης</string>
    <string name="contact_email">suncitydevs@gmail.com</string>
    <string name="logo_desc">Logo Icon</string>
    <string name="dev_title">Developers</string>
    <string name="special_thanks_title">Special Thanks</string>
    <string name="contact_info_title">Contact Info</string>
    <string name="info_title">CoronoSMS</string>
    <string name="flat_icon_site">flaticon.com</string>
    <string name="privacy_policy_link">tzelalis.github.io/CoronoSMS/</string>
    <!--    <string name="privacy_policy_link"><a href='https://tzelalis.github.io/CoronoSMS/'>Pricacy Policy</a></string>-->

    <!--privacy policy dialog strings    -->
    <string name="privacy_policy_checkbox">Αποδέχομαι τους όρους χρήσης</string>
    <string name="privacy_policy_button">Επομενο</string>
    <string name="privacy_policy_string">d</string>
    <string name="test"></string>
</resources>
