<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdFragment"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/fragment_background">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:src="@drawable/slide_three_img" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuto_3"
        android:textSize="26sp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textColor="@color/tuto_title"
        android:fontFamily="@font/lato_regular"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_3"
        android:textSize="18sp"
        android:gravity="center"
        android:fontFamily="@font/lato_light"
        android:layout_gravity="center"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">




        <Button
            android:id="@+id/slider_three_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/back"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />

        <Button
            android:id="@+id/slider_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/done"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
    </LinearLayout>

</LinearLayout>