<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/fragment_background">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_form" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuto_2"
        android:textSize="26sp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textColor="@color/desc_color"
        android:fontFamily="@font/lato_bold"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_height="wrap_content"
        android:text="@string/description_2"
        android:textSize="18sp"
        android:fontFamily="@font/lato_light"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/slider_two_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/back"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:textAlignment="textStart"
            android:textColor="@color/tuto_title"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            tools:ignore="RtlCompat" />


        <Button
            android:id="@+id/slider_two_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/next"
            android:textColor="@color/tuto_title"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            />
    </LinearLayout>

</LinearLayout>
