<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/info_top_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="5dp">

        <Button
            android:id="@+id/info_close_button"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:paddingStart="0dp"
            android:paddingTop="3dp"
            android:paddingEnd="0dp"
            android:paddingBottom="3dp"
            app:icon="@drawable/ic_back_icon"
            app:iconGravity="textStart"
            app:iconSize="35dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="6dp"
            android:contentDescription="@string/logo_desc"
            app:srcCompat="@drawable/ic_info_logo" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="false"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginStart="6dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:layout_toStartOf="@id/imageView"
            android:layout_toEndOf="@id/info_close_button"
            android:text="@string/info_title"
            android:textAlignment="textEnd"
            android:textColor="@color/tuto_title"
            android:textSize="18sp" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/info_top_menu"
        android:layout_marginTop="-3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:elevation="4dp"
                android:padding="30dp">

                <TextView
                    android:id="@+id/textView10"
                    style="@style/info_title_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/dev_title"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/info_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/xhino" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/info_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="2.5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="2.5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/rizik" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/info_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tzelalis" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:elevation="4dp"
                android:padding="30dp">

                <TextView
                    android:id="@+id/textView11"
                    style="@style/info_title_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/special_thanks_title"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/textView12"
                    style="@style/info_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/iko" />

                <TextView
                    android:id="@+id/textView17"
                    style="@style/info_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="flaticon.com" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:elevation="4dp"
                android:padding="30dp">

                <TextView
                    android:id="@+id/textView14"
                    style="@style/info_title_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/contact_info_title"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/textView15"
                    style="@style/info_texts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/contact_email" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/reason"
                    android:textSize="13sp" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
