<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/fragment_background">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:src="@drawable/slide_one_img" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuto_1"
        android:textSize="26sp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textColor="@color/tuto_title"
        android:fontFamily="@font/lato_regular"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_1"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="18sp"
        android:fontFamily="@font/lato_light"
        android:layout_gravity="center"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/slider_one_next"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="bottom|end"
            android:gravity="bottom|end"
            android:text="@string/next"
            android:textSize="25sp"
            android:textColor="@color/tuto_title"
            android:fontFamily="@font/lato_bold"/>
    </LinearLayout>

</LinearLayout>